# jupytermosaic

./: .gitignore  LICENSE  README.md  RELEASE.md  Untitled.ipynb  example-notebook.ipynb  install.json  package.json  pyproject.toml  setup.py  test-notebook.ipynb
LEGACY_MOSAIC_NOTEBOOK/: description.yaml  main.js
jupyter_lab/jupytermosaic/: package.json
jupyter_notebook/: README.md  description.yaml  main.js  style.css
jupyter_notebook/.history/: main_20201223183314.js  main_20201223185144.js  main_20201223185308.js  main_20201223185414.js  main_20201223185701.js  main_20201223185807.js  main_20201223185810.js  main_20201223185901.js  main_20201223185946.js  main_20201223190222.js  main_20201223190312.js  main_20201224110836.js  main_20201224112107.js  main_20201224112146.js  main_20201224112211.js  main_20201224112222.js  main_20201224112426.js  main_20201224112443.js  main_20201224112530.js  main_20201224112612.js  main_20201224113214.js  main_20201224113301.js  main_20201224113753.js  main_20201224114022.js  main_20201224114100.js  main_20201224114324.js  main_20201224114329.js  main_20201224114840.js  style_20201224110940.css  style_20201224111511.css  style_20201224111551.css  style_20201224111637.css  style_20201224111721.css  style_20201224112126.css  style_20201224112317.css  style_20201224112707.css  style_20201224112754.css  style_20201224112810.css  style_20201224113018.css  style_20201224113049.css  (+20 more)
mosaic/: __init__.py
mosaic/labextension/: build_log.json  package.json
mosaic_lab/: .pnp.cjs
mosaic_lab/jupytermosaic/: LICENSE  README.md  Untitled.ipynb  package.json  pyproject.toml
mosaic_lab/labextension/: README.md  RELEASE.md  install.json  package-lock.json  package.json  pyproject.toml
mosaic_lab/labextension/binder/: postBuild
mosaic_lab/labextension/onemotime/: .gitignore
mosaic_lab/labextension/style/: mosaic.css
mosaic_lab/labextension/ui-tests/: package.json
mosaic_lab/labextension/ui-tests/tests/: mosaic_lab.spec.ts
mosaic_lab/mosaic_lab_extension/: .copier-answers.yml  .gitignore  .prettierignore  LICENSE  README.md  RELEASE.md  install.json  (+2 more)
mosaic_notebook/: CellUtils.js  DragListener.js  GroupUtils.js  StyleManager.js  bugs.txt  main.js  style.css
schema/: plugin.json
src/: MosaicGroup.ts  MosaicNotebookPanel.ts  MosaicViewModel.ts  index.ts  mosaicdrag.ts
style/: index.js  mosaic.css
testing/: displaylayout.js  main.js  main2.js  style.css
(+80 files in other folders)
